# Axum

./: .gitignore  Cargo.toml  README.md
libs/lib-auth/: Cargo.toml  future.rs  layer.rs  lib.rs  macros.rs  session.rs
libs/lib-auth/authentication/: mod.rs
libs/lib-auth/authentication/auth_basic/: config.rs  mod.rs
libs/lib-auth/session_store/: memory.rs  mod.rs
libs/lib-core/: Cargo.toml  constant.rs  env.rs  lib.rs  macros.rs
libs/lib-core/response/: action.rs  error.rs  mod.rs
libs/lib-core/tests/: response_tests.rs
libs/lib-core/validator/: body.rs  error.rs  form.rs  mod.rs  query.rs
libs/lib-crypto/: Cargo.toml  algorithm.rs  decoding.rs  encoding.rs  error.rs  header.rs  lib.rs  macros.rs  paseto.rs
libs/lib-sqlx-setup/: Cargo.toml
libs/lib-sqlx-setup/src/: lib.rs
libs/lib-util/: Cargo.toml
scripts/: setup.py
