[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "lib.rs"

[dependencies]
tower-layer = "0.3.2"
tower-service = "0.3.2"
http = "1.0.0"
pin-project-lite = "0.2.13"
axum-core = "0.4.3"
async-trait = "0.1.77"
serde = "1.0.197"
serde_json = "1.0.114"
uuid = "1.7.0"
time = "0.3.34"

[lints]
workspace = true
