[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = []
prod = []


[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.34.0"
validator = { version = "0.16.1", features = ["derive"] }
mime = "0.3.17"
bytes = "1.5.0"
serde_with = "3.6.0"
