[package]
name = "lib-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.21.7"
rusty_paseto = "0.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = "0.3.34"

[lints]
workspace = true
