[package]
name = "lib-sqlx-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "json", "postgres", "uuid"] }
tokio = { version = "1.34.0", features = ["macros"] }
